Make the ranges used by find code able to span anonymous content.  Bug 384706, r+sr=sicking