embedding/components/find/src/nsFind.h
@@ -67,6 +67,8 @@ public:
   nsFind();
   virtual ~nsFind();
 
+  static already_AddRefed<nsIDOMRange> CreateRange();
+
 protected:
   static PRInt32 sInstanceCount;
 
